--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,3 +22,9 @@
 #modal:empty {
 	display: none;
 }
+
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	padding: 2rem;
+}
